# cover_letter_automation

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  init_session.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml  test.yml
src/cover_letter_automation/: __init__.py  cli.py  session.py  tools.py
src/cover_letter_automation/agents/: __init__.py  client.py  company_researcher.py  critic.py  job_description_ingester.py  resume_retriever.py  writer.py
tests/cover_letter_automation/: __init__.py  test_tools.py
tests/cover_letter_automation/agents/: conftest.py  test_eval_critic.py  test_eval_resume_retriever.py  test_eval_writer.py  utils.py
tests/cover_letter_automation/agents/inputs/critic/: language_errors.yaml  normal_inputs.yaml
tests/cover_letter_automation/agents/inputs/writer/: critiqued_inputs.yaml  normal_inputs.yaml
